# dmod-boot

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  REFACTORING_SUMMARY.md
.github/workflows/: build.yml
configs/: dmod-cfg.cmake
configs/arch/armv7/: arch.ld  cfg.cmake
configs/arch/armv7/cortex-m4/: cfg.cmake
configs/gdb/: gdb_init.gdb.in
configs/mcu/: STM32F407G.cmake  STM32F746ZG.cmake  STM32F746xG.cmake  stm32f746.cmake  stm32f746ngh6.cmake
configs/mcu/stm32f4/: stm32f407g.ld
configs/mcu/stm32f7/: stm32f746xg.ld  stm32f746zg.ld
examples/: main.c
inc/: CMakeLists.txt
include/: dmod_printf.h
lib/: CMakeLists.txt
linker/: STM32F407xG.ld  STM32F746xG.ld  common.ld
scripts/: README.md  dmod_log_monitor.py  extract_addresses.sh
src/: CMakeLists.txt  Makefile  dmod_printf.c  main.c  startup_stm32f407.c  startup_stm32f746.c
src/arch/: CMakeLists.txt
src/arch/armv7/: CMakeLists.txt
src/arch/armv7/cortex-m4/: startup.s
src/arch/armv7/cortex-m7/: CMakeLists.txt  startup.s
test/: CMakeLists.txt  Makefile  README.md  main_x86_test.c  simulate_openocd.py  simulated_addresses.txt  test_buffer_logic.py
